--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </head>
 <body>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
+    <audio id="popSound" src="pop.mp3" preload="auto"></audio>
     <script src="game.js"></script>
 </body>
 </html>
