--- a/index.html
+++ b/index.html
@@ -3,24 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bouncing Ball Game</title>
+    <title>Retro Game Loader</title>
     <style>
         body {
+            background-color: black;
+            color: lime;
+            font-family: 'Press Start 2P', cursive;
+            text-align: center;
+            padding: 0;
+            margin: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin: 0;
-            background-color: #f0f0f0;
         }
-        canvas {
-            border: 1px solid black;
+
+        .container {
+            border: 5px solid lime;
+            padding: 20px;
+            width: 90%;
+            max-width: 400px;
+            background-color: black;
+        }
+
+        h1 {
+            font-size: 1.5em;
+            margin-bottom: 20px;
+        }
+
+        .button {
+            display: block;
+            background-color: lime;
+            color: black;
+            text-decoration: none;
+            padding: 15px;
+            margin: 10px 0;
+            border: 2px solid black;
+            transition: background-color 0.3s;
+        }
+
+        .button:hover {
+            background-color: darkgreen;
         }
     </style>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
-    <canvas id="gameCanvas" width="800" height="600"></canvas>
-    <audio id="popSound" src="pop.mp3" preload="auto"></audio>
-    <script src="game.js"></script>
+    <div class="container">
+        <h1>Select a Game</h1>
+        <a class="button" href="https://shuamorg.github.io/Duke/">The Adventures of Fox, Chicken and Frog</a>
+        <a class="button" href="https://shuamorg.github.io/circlebeep/">Circle Tap</a>
+        <a class="button" href="https://shuamorg.github.io/theramin/">Theramin</a>
+    </div>
 </body>
 </html>
