--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
         .button:hover {
             background-color: darkgreen;
         }
+
+        audio {
+            display: none; /* Hide the audio player */
+        }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
@@ -55,5 +59,9 @@
         <a class="button" href="https://shuamorg.github.io/circlebeep/">Circle Tap</a>
         <a class="button" href="https://shuamorg.github.io/theramin/">Theramin</a>
     </div>
+    <audio autoplay loop>
+        <source src="https://freemusicarchive.org/track/Golden-Age-of-Videogames/download" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
 </body>
 </html>
