--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         <a class="button" href="https://shuamorg.github.io/circlebeep/">Circle Tap</a>
         <a class="button" href="https://shuamorg.github.io/theramin/">Theramin</a>
     </div>
-    <audio autoplay loop>
-        <source src="https://freemusicarchive.org/track/8-Bit_Adventure/download" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
+    <audio autoplay loop> src="https://files.freemusicarchive.org/storage-freemusicarchive-org/music/Oddio_Overplay/Adhesive_Wombat/Adhesive_Wombat_-_08_Bit_Adventure/Adhesive_Wombat_-_08_Bit_Adventure.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
+
 </body>
 </html>
