--- a/index.html
+++ b/index.html
@@ -45,65 +45,56 @@
         .button:hover {
             background-color: darkgreen;
         }
-
-        .play-button {
-            background-color: darkred;
-            color: white;
-            padding: 10px;
-            margin-top: 20px;
-            cursor: pointer;
-        }
-
-        .play-button:hover {
-            background-color: red;
-        }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="game-container">
         <h1>Select a Game</h1>
         <a class="button" href="https://shuamorg.github.io/Duke/">The Adventures of Fox, Chicken and Frog</a>
         <a class="button" href="https://shuamorg.github.io/circlebeep/">Circle Tap</a>
         <a class="button" href="https://shuamorg.github.io/theramin/">Theramin</a>
-        <button class="play-button" onclick="playTune()">Play Music</button>
     </div>
 
     <script>
-        function playTune() {
+        window.onload = function() {
             const AudioContext = window.AudioContext || window.webkitAudioContext;
             const audioCtx = new AudioContext();
 
-            const notes = [
-                { frequency: 261.63, duration: 0.4 }, // C4
-                { frequency: 293.66, duration: 0.4 }, // D4
-                { frequency: 329.63, duration: 0.4 }, // E4
-                { frequency: 349.23, duration: 0.4 }, // F4
-                { frequency: 392.00, duration: 0.4 }, // G4
-                { frequency: 440.00, duration: 0.4 }, // A4
-                { frequency: 493.88, duration: 0.4 }, // B4
-                { frequency: 523.25, duration: 0.4 }  // C5
-            ];
+            function playTune() {
+                const notes = [
+                    { frequency: 261.63, duration: 0.4 }, // C4
+                    { frequency: 293.66, duration: 0.4 }, // D4
+                    { frequency: 329.63, duration: 0.4 }, // E4
+                    { frequency: 349.23, duration: 0.4 }, // F4
+                    { frequency: 392.00, duration: 0.4 }, // G4
+                    { frequency: 440.00, duration: 0.4 }, // A4
+                    { frequency: 493.88, duration: 0.4 }, // B4
+                    { frequency: 523.25, duration: 0.4 }  // C5
+                ];
 
-            let currentTime = audioCtx.currentTime;
+                let currentTime = audioCtx.currentTime;
 
-            notes.forEach(note => {
-                const oscillator = audioCtx.createOscillator();
-                const gainNode = audioCtx.createGain();
+                notes.forEach(note => {
+                    const oscillator = audioCtx.createOscillator();
+                    const gainNode = audioCtx.createGain();
 
-                oscillator.connect(gainNode);
-                gainNode.connect(audioCtx.destination);
+                    oscillator.connect(gainNode);
+                    gainNode.connect(audioCtx.destination);
 
-                oscillator.type = 'square';
-                oscillator.frequency.value = note.frequency;
-                gainNode.gain.setValueAtTime(0.1, currentTime);
+                    oscillator.type = 'square';
+                    oscillator.frequency.value = note.frequency;
+                    gainNode.gain.setValueAtTime(0.1, currentTime);
 
-                oscillator.start(currentTime);
-                oscillator.stop(currentTime + note.duration);
+                    oscillator.start(currentTime);
+                    oscillator.stop(currentTime + note.duration);
 
-                currentTime += note.duration;
-            });
-        }
+                    currentTime += note.duration;
+                });
+            }
+
+            playTune();
+        };
     </script>
 </body>
 </html>
