--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
         }
 
         .button {
-            background-color: darkred;
             color: white;
             padding: 20px;
             border: none;
@@ -64,8 +63,12 @@
     </div>
     <div class="container" id="game-container">
         <h1>Select a Game</h1>
+        <a class="button" href="https://prime-elk-horribly.ngrok-free.app/">Sassy Oil</a>
+        <br><br><br>
         <a class="button" href="https://shuamorg.github.io/Duke/">The Adventures of Fox, Chicken and Frog</a>
+        <br><br><br>
         <a class="button" href="https://shuamorg.github.io/circlebeep/">Circle Tap</a>
+        <br><br><br>
         <a class="button" href="https://shuamorg.github.io/theramin/">Theramin</a>
     </div>
 
