--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
     <div class="container" id="game-container">
         <h1>Select a Game</h1>
-        <div><a class="button" href="https://prime-elk-horribly.ngrok-free.app/">Sassy Oil</a></div>
+        <div><a class="button" href="http://80.195.207.126/">Sassy Oil</a></div>
         <br><br><br>
         <div><a class="button" href="https://shuamorg.github.io/Duke/">The Adventures of Fox, Chicken and Frog</a></div>
         <br><br><br>
