--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <button class="button" onclick="startGame()">Click here to enter</button>
     </div>
     <div class="container" id="game-container">
-        <h1>Select a Game</h1>
+        <h1>Select a Game:</h1>
         <div><a class="button" href="http://80.195.207.126/">Sassy Oil</a></div>
         <br><br><br>
         <div class="coming-soon-text">More games coming soon, in the meantime see our concept tests below!</div>
